--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     <link href="favicons.css" rel="stylesheet">
+
+    <link href="bootstrap-5.2.2-dist/css/master.css" rel="stylesheet">
+
     <title>Document</title>
 </head>
 <body>
@@ -43,7 +45,7 @@
         </div>
     </nav>
 
-     <!-- Founders -->
+     <!-- Top area -->
      <section id="founders" style="padding-top: 20vh;">
         <div class="container-sm d-none d-lg-block">
             <div class="row justify-content-center align-items-center">
@@ -62,20 +64,47 @@
         </div>
     </section>
 
-    <div class="container">
-        <div class="row">
-            <div class="col"> 
-                <div class="card">
-                    <img src="img/vehicle-1.png" class="card-img-top car-img" alt="">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Model Name</h5>
-                        <p class="card-text">New   2021   Automatic   Petrol</p>
-                        <a href="#" class="btn btn-primary">Checkout</a>
+    <!-- Inventory -->
+    <section id="inventory">
+        <div class="container">
+            <div class="row">
+                <div class="col"> 
+                    <div class="card">
+                        <img src="img/vehicle-1.png" class="card-img-top car-img" alt="">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Model Name</h5>
+                            <p class="card-text">New   2021   Automatic   Petrol</p>
+                            <a href="#" class="btn btn-primary">Checkout</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col"> 
+                    <div class="card">
+                        <img src="img/vehicle-2.png" class="card-img-top car-img" alt="">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Model Name</h5>
+                            <p class="card-text">New   2021   Automatic   Petrol</p>
+                            <a href="#" class="btn btn-primary">Checkout</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/car-1.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/car-2.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/car-3.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+    </section>
 
 </body>
 </html>
