--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet">
     <link href="favicons.css" rel="stylesheet">
 
-    <link href="bootstrap-5.2.2-dist/css/master.css" rel="stylesheet">
+    <link href="css/master.css" rel="stylesheet">
 
     <title>Document</title>
 </head>
