--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link href="style.css" rel="stylesheet">
-    <link href="favicons.css" rel="stylesheet">
 
-    <link href="css/master.css" rel="stylesheet">
+    <link href="css/bootstrap-master.css" rel="stylesheet">
 
     <title>Document</title>
 </head>
@@ -90,21 +90,21 @@
                 </div>
             </div>
         </div>
-
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="img/car-1.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="img/car-2.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="img/car-3.png" class="d-block w-100" alt="...">
-              </div>
-            </div>
-          </div>
     </section>
+
+    <!-- Bootstrap JS -->
+    <script src="script/bootstrap-js/bootstrap.bundle.js"></script>
+    <script src="script/bootstrap-js/bootstrap.bundle.js.map"></script>
+    <script src="script/bootstrap-js/bootstrap.bundle.min.js"></script>
+    <script src="script/bootstrap-js/bootstrap.bundle.min.js.map"></script>
+    <script src="script/bootstrap-js/bootstrap.esm.js"></script>
+    <script src="script/bootstrap-js/bootstrap.esm.js.map"></script>
+    <script src="script/bootstrap-js/bootstrap.esm.min.js"></script>
+    <script src="script/bootstrap-js/bootstrap.esm.min.js.map"></script>
+    <script src="script/bootstrap-js/bootstrap.js"></script>
+    <script src="script/bootstrap-js/bootstrap.js.map"></script>
+    <script src="script/bootstrap-js/bootstrap.min.js"></script>
+    <script src="script/bootstrap-js/bootstrap.min.js.map"></script>
 
 </body>
 </html>
