--- a/index.html
+++ b/index.html
@@ -46,26 +46,15 @@
     </nav>
 
      <!-- Top area -->
-     <section id="founders" style="padding-top: 20vh;">
+     <section id="top" style="padding-top: 10vh;">
         <div class="container-sm d-none d-lg-block">
-            <div class="row justify-content-center align-items-center">
-                    <h1 class="display-1 text-white text-center">Title:</h1>
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col">
-                                <button type="button" class="btn btn-lg btn-outline-primary">Button 1</button>
-                            </div>
-                            <div class="col">
-                                <button type="button" class="btn btn-outline-primary">Button 2</button>
-                            </div>
-                        </div>
-                    </div>
-            </div>
+                    <h1 class="top-text">FIND YOUR CAR</h1>
+                    <button type="button" class="btn btn-primary btn-lg">EXPLORE CARS</button>
         </div>
     </section>
 
     <!-- Inventory -->
-    <section id="inventory">
+    <section id="inventory" style="padding-top: 10vh;">
         <div class="container">
             <div class="row">
                 <div class="col"> 
@@ -88,6 +77,52 @@
                         </div>
                     </div>
                 </div>
+                <div class="col"> 
+                    <div class="card">
+                        <img src="img/vehicle-3.png" class="card-img-top car-img" alt="">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Model Name</h5>
+                            <p class="card-text">New   2021   Automatic   Petrol</p>
+                            <a href="#" class="btn btn-primary">Checkout</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" style="padding-top: 10vh;">
+        <div class="container-lg my-5">
+            <div class="row justify-content-center">
+                <div class="col-md-6 my-5">
+                    <h2 style="text-align: center;">Find us here:</h2>
+                    <div class="card" style="height: 100%;">
+                    <iframe width="100%" height="100%" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2492.2740066702377!2d-83.3618275138211!3d42.462688310661335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8824b116669bce49%3A0x5e70c495594a2405!2s32000%20Shiawassee%20St%2C%20Farmington%2C%20MI%2048336!5e0!3m2!1sen!2sus!4v1667081914522!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="text-center">
+                        <h2>Get in Touch</h2>
+                        <p class="lead">Have questions? Contact us here:</p>
+                    </div>
+                    <form>
+                        <label for="email" class="form-label">Email Address:</label>
+                        <input type="email" class="form-control" id="email" placeholder="Ex. JohnDoe@example.com">
+
+                        <label for="name" class="form-label">Name:</label>
+                        <input type="text" class="form-control" id="name" placeholder="Ex. John Doe">
+
+                        <label for="subject" class="form-label">Subject:</label>
+                        <input type="text" class="form-control" id="subject" placeholder="Ex. Subject">
+
+                        <label for="message" class="form-label">Message:</label>
+                        <textarea name="message" class="form-control" id="message" cols="30" rows="6" placeholder="message.."></textarea>
+
+                        <div class="text-center mt-4">
+                            <button class="btn btn-secondary" type="submit">Submit</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
@@ -105,6 +140,5 @@
     <script src="script/bootstrap-js/bootstrap.js.map"></script>
     <script src="script/bootstrap-js/bootstrap.min.js"></script>
     <script src="script/bootstrap-js/bootstrap.min.js.map"></script>
-
 </body>
 </html>
