currency formater on the loan calc

--- a/index.html
+++ b/index.html
@@ -131,15 +131,15 @@
             <h3 class="formHeader">Output</h3>
 
             <label>Monthly Payment:</label>
-            <input id="monthly" type="number" placeholder="Monthly Payment" class="box">
+            <input id="monthly" type="text" placeholder="Monthly Payment" class="box">
             <label>Total Loan Amount:</label>
-            <input id="totalLoanAmount" type="number" placeholder="Total Loan Amount" class="box">
+            <input id="totalLoanAmount" type="text" placeholder="Total Loan Amount" class="box">
             <label>Upfront Cost:</label>
-            <input id="upfront" type="number" placeholder="Upfront Cost" class="box">
+            <input id="upfront" type="text" placeholder="Upfront Cost" class="box">
             <label>Total Loan Intrest:</label>
-            <input id="totalLoanIntrest" type="number" placeholder="Total Loan Intrest" class="box">
+            <input id="totalLoanIntrest" type="text" placeholder="Total Loan Intrest" class="box">
             <label>Total Cost:</label>
-            <input id="totalCost" type="number" placeholder="Total Cost" class="box">
+            <input id="totalCost" type="text" placeholder="Total Cost" class="box">
         </form>
     </div>
 </section>
