rest of cars added to the car swiper

--- a/index.html
+++ b/index.html
@@ -96,6 +96,86 @@
                 </div>
             </div>
 
+            <div class="swiper-slide box">
+                <img src="image/vehicle-2.png" alt="">
+                <div class="content">
+                    <h3>new model</h3>
+                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <p>
+                        New -
+                        2021 -
+                        Automatic -
+                        petrol -
+                        183mph
+                    </p>
+                    <a href="#" class="btn">check out</a>
+                </div>
+            </div>
+
+            <div class="swiper-slide box">
+                <img src="image/vehicle-3.png" alt="">
+                <div class="content">
+                    <h3>new model</h3>
+                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <p>
+                        New -
+                        2021 -
+                        Automatic -
+                        petrol -
+                        183mph
+                    </p>
+                    <a href="#" class="btn">check out</a>
+                </div>
+            </div>
+
+            <div class="swiper-slide box">
+                <img src="image/vehicle-4.png" alt="">
+                <div class="content">
+                    <h3>new model</h3>
+                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <p>
+                        New -
+                        2021 -
+                        Automatic -
+                        petrol -
+                        183mph
+                    </p>
+                    <a href="#" class="btn">check out</a>
+                </div>
+            </div>
+
+            <div class="swiper-slide box">
+                <img src="image/vehicle-5.png" alt="">
+                <div class="content">
+                    <h3>new model</h3>
+                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <p>
+                        New -
+                        2021 -
+                        Automatic -
+                        petrol -
+                        183mph
+                    </p>
+                    <a href="#" class="btn">check out</a>
+                </div>
+            </div>
+
+            <div class="swiper-slide box">
+                <img src="image/vehicle-6.png" alt="">
+                <div class="content">
+                    <h3>new model</h3>
+                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <p>
+                        New -
+                        2021 -
+                        Automatic -
+                        petrol -
+                        183mph
+                    </p>
+                    <a href="#" class="btn">check out</a>
+                </div>
+            </div>
+
         </div>
 
         <div class="swiper-pagination"></div>
