Cards for explore tab

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 
+    <title>Name</title>
+
 </head>
 
 <body>
@@ -23,7 +25,7 @@
         <a href="#vehicles">popular</a>
         <a href="#reviews">reviews</a>
         <a href="#contact">contact</a>
-        <a href='#explore'>explore</a>
+        <a href='explore.html'>explore</a>
     </nav>
 
     <div id="login-btn">
@@ -359,12 +361,11 @@
 
         <div class="box">
             <h3>quick links</h3>
-            <a href="#"> <i class="fas fa-arrow-right"></i> home </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> vehicles </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> services </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> featured </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> reviews </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> contact </a>
+            <a href="#home"> <i class="fas fa-arrow-right"></i> home </a>
+            <a href="#vehicles"> <i class="fas fa-arrow-right"></i> popular </a>
+            <a href="#reviews"> <i class="fas fa-arrow-right"></i> reviews </a>
+            <a href="#contact"> <i class="fas fa-arrow-right"></i> contact </a>
+            <a href="explore.html"> <i class="fas fa-arrow-right"></i> explore </a>
         </div>
 
         <div class="box">
