link explore button

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <img data-speed="5" src="image/home-img.png" alt="">
 
-    <a data-speed="7" href="#" class="btn">explore cars</a>
+    <a data-speed="7" href="explore.html" class="btn">explore cars</a>
 
 </section>
 
