car image stucture

--- a/explore.html
+++ b/explore.html
@@ -113,11 +113,9 @@
                 <h3>new model</h3>
                 <div class="price"> <span>price : </span> $62,000/- </div>
                 <p>
-                    New -
                     2021 -
                     Automatic -
-                    petrol -
-                    183mph
+                    60k miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
