--- a/index.html
+++ b/index.html
@@ -83,96 +83,84 @@
         <div class="swiper-wrapper">
 
             <div class="swiper-slide box">
-                <img src="image/vehicle-1.png" alt="">
+                <img src="image/cars/1.png" alt="">
                 <div class="content">
                     <h3>new model</h3>
                     <div class="price"> <span>price : </span> $62,000/- </div>
                     <p>
-                        New -
                         2021 -
                         Automatic -
-                        petrol -
-                        183mph
+                        60k Miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/vehicle-2.png" alt="">
+                <img src="image/cars/2.png" alt="">
                 <div class="content">
                     <h3>new model</h3>
                     <div class="price"> <span>price : </span> $62,000/- </div>
                     <p>
-                        New -
                         2021 -
                         Automatic -
-                        petrol -
-                        183mph
+                        60k Miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/vehicle-3.png" alt="">
+                <img src="image/cars/3.png" alt="">
                 <div class="content">
                     <h3>new model</h3>
                     <div class="price"> <span>price : </span> $62,000/- </div>
                     <p>
-                        New -
                         2021 -
                         Automatic -
-                        petrol -
-                        183mph
+                        60k Miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/vehicle-4.png" alt="">
+                <img src="image/cars/4.png" alt="">
                 <div class="content">
                     <h3>new model</h3>
                     <div class="price"> <span>price : </span> $62,000/- </div>
                     <p>
-                        New -
                         2021 -
                         Automatic -
-                        petrol -
-                        183mph
+                        60k Miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/vehicle-5.png" alt="">
+                <img src="image/cars/5.png" alt="">
                 <div class="content">
                     <h3>new model</h3>
                     <div class="price"> <span>price : </span> $62,000/- </div>
                     <p>
-                        New -
                         2021 -
                         Automatic -
-                        petrol -
-                        183mph
+                        60k Miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/vehicle-6.png" alt="">
+                <img src="image/cars/6.png" alt="">
                 <div class="content">
                     <h3>new model</h3>
                     <div class="price"> <span>price : </span> $62,000/- </div>
                     <p>
-                        New -
                         2021 -
                         Automatic -
-                        petrol -
-                        183mph
+                        60k Miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
