chnaged front image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <h3 data-speed="-2">find your car</h3>
 
-    <img data-speed="5" src="image/home-img.png" alt="">
+    <img data-speed="5" src="image/Frontpagecars.png" alt="">
 
     <a data-speed="7" href="explore.html" class="btn">explore cars</a>
 
