--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Name</title>
+    <title>AutoWizard</title>
 
 </head>
 
@@ -20,7 +20,7 @@
 <header class="header">
     <div id="menu-btn" class="fas fa-bars"></div>
 
-    <a href="#" class="logo">NAME</a>
+    <a href="#" class="logo">AutoWizard</a>
 
     <nav class="navbar">
         <a href="#home">home</a>
