--- a/explore.html
+++ b/explore.html
@@ -17,7 +17,7 @@
 <header class="header">
     <div id="menu-btn" class="fas fa-bars"></div>
 
-    <a href="#" class="logo">NAME</a>
+    <a href="#" class="logo">AutoWizard</a>
 
     <nav class="navbar">
         <a href="index.html#home">home</a>
