Fixed green galaxy behind subscribe + Added back

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header class="header">
     <div id="menu-btn" class="fas fa-bars"></div>
 
-    <a href="#" class="logo">AutoWizard</a>
+    <a href="#" class="logo" ><img src="image/Circle Education Badge Logo (2).png" alt="AutoWizard Logo" style="float: right;  padding-left: 10px; padding-bottom: 3px; width: 43px;height:35px;">AutoWizard</a>
 
     <nav class="navbar">
         <a href="#home">home</a>
@@ -28,6 +28,7 @@
         <a href="#reviews">reviews</a>
         <a href="#contact">contact</a>
         <a href='explore.html'>explore</a>
+        <a href='AboutUs.html'>About Us</a>
     </nav>
 
     <div id="login-btn">
@@ -57,7 +58,7 @@
 
 <section class="home" id="home">
 
-    <h3 data-speed="-2">find your car</h3>
+    <h3 data-speed="-2">Used Cars for Magical Prices</h3>
 
     <img data-speed="5" src="image/Frontpagecars.png" alt="">
 
@@ -67,7 +68,7 @@
 
 <section class="newsletter">
     <h3>subscribe for updates</h3>
-    <p>Get in the loop for new releases and information</p>
+    
 
    <form action="">
         <input type="email" placeholder="enter your email">
@@ -350,26 +351,25 @@
         <div class="box">
             <h3>quick links</h3>
             <a href="#home"> <i class="fas fa-arrow-right"></i> home </a>
-            <a href="#vehicles"> <i class="fas fa-arrow-right"></i> popular </a>
-            <a href="#reviews"> <i class="fas fa-arrow-right"></i> reviews </a>
-            <a href="#contact"> <i class="fas fa-arrow-right"></i> contact </a>
-            <a href="explore.html"> <i class="fas fa-arrow-right"></i> explore </a>
-        </div>
+           <a href="#vehicles"> <i class="fas fa-arrow-right"></i> popular </a>
+           <a href="#reviews"> <i class="fas fa-arrow-right"></i> reviews </a>
+           <a href="#contact"> <i class="fas fa-arrow-right"></i> contact </a>
+           <a href="explore.html"> <i class="fas fa-arrow-right"></i> explore </a>
+       </div>
+ 
+       <div class="box">
+           <h3>contact us!</h3>
+           <a href="#"> <i class="fas fa-phone"></i> +248-489-3455</a>
+           <a href="mailto:FarmingtonHSBPA@gmail.com"> <i class="fas fa-envelope"></i> FarmingtonHSBPA@gmail.com  </a>
+           <a href="https://maps.google.com/maps?q=farminton+high+school,Farmington"> <i class="fas fa-map-marker-alt"></i> 32000 Shiawassee St, Farmington, MI 48336 </a>
+       </div>
+ 
+       <div class="box">
+           <h3>Socials</h3>
+           <a href="https://www.facebook.com/michiganbpa/"> <i class="fab fa-facebook-f"></i> facebook </a>
+           <a href="https://twitter.com/MichiganBPA"> <i class="fab fa-twitter"></i> twitter </a>
+           <a href="https://www.instagram.com/farmington_bpa/"> <i class="fab fa-instagram"></i> instagram </a>
 
-        <div class="box">
-            <h3>contact info</h3>
-            <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
-            <a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
-            <a href="#"> <i class="fas fa-envelope"></i> name@example.com </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> 32000 Shiawassee St, Farmington, MI 48336 </a>
-        </div>
-
-        <div class="box">
-            <h3>contact info</h3>
-            <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
-            <a href="#"> <i class="fab fa-twitter"></i> twitter </a>
-            <a href="#"> <i class="fab fa-instagram"></i> instagram </a>
-            <a href="#"> <i class="fab fa-linkedin"></i> linkedin </a>
         </div>
 
     </div>
