added logo to explore page & fixed nav bar on explore page

--- a/explore.html
+++ b/explore.html
@@ -17,14 +17,15 @@
 <header class="header">
     <div id="menu-btn" class="fas fa-bars"></div>
 
-    <a href="#" class="logo">AutoWizard</a>
+    <a href="#" class="logo" ><img src="image/Circle Education Badge Logo (2).png" alt="AutoWizard Logo" style="float: right;  padding-left: 10px; padding-bottom: 3px; width: 43px;height:35px;">AutoWizard</a>
 
     <nav class="navbar">
         <a href="index.html#home">home</a>
-        <a href="#vehicles">popular</a>
-        <a href="#reviews">reviews</a>
-        <a href="#contact">contact</a>
+        <a href="index.html#vehicles">popular</a>
+        <a href="index.html#reviews">reviews</a>
+        <a href="index.html#contact">contact</a>
         <a href='explore.html'>explore</a>
+        <a href='AboutUs.html'>About Us</a>
     </nav>
 
     <div id="login-btn">
