added hidden newsletter image to hopefully fix on git hub

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 <section class="newsletter">
     <h3>subscribe for updates</h3>
     
+    <img src="image/subscribe.png" hidden>
 
    <form action="">
         <input type="email" placeholder="enter your email">
