back to top button!!

--- a/explore.html
+++ b/explore.html
@@ -35,6 +35,8 @@
     </div>
 </header> 
 
+<button id="backToTopButton" class="backToTopButton" title="Go to top">Top</button>
+
 <div class="login-form-container">
 
     <span id="close-login-form" class="fas fa-times"></span>
@@ -391,6 +393,7 @@
 
 <script src="js/filter.js"></script>
 <script src="js/script.js"></script>
+<script src="js/backToTop.js"></script>
 
 <script>
     function color(id) {
