--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <button class="btn">login</button>
     </div>
 </header> 
-    
+
+<button id="backToTopButton" title="Go to top">Top</button>
+
 <div class="login-form-container">
 
     <span id="close-login-form" class="fas fa-times"></span>
@@ -378,7 +380,7 @@
 </section>
 
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-
+<script src="js/backToTop.js"></script>
 <script src="js/script.js"></script>
 
 </body>
